tests/invalid/test11_invalid.imagelang
{
    vector<int> v;
    v["abc"] = 1;
}
